tests/baselines/reference/moduleAugmentationsImports3.errors.txt
e.ts(2,1): error TS18056: Declaration file contains hand-written file reference directives: "c.d.ts"
main.ts(2,1): error TS18056: Declaration file contains hand-written file reference directives: "d.d.ts"


==== main.ts (1 errors) ====
    /// <reference path="d.d.ts"/>
    import {A} from "./a";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "d.d.ts"
    import "D";
    import "e";
    
    let a: A;
    let b = a.getB().x.toFixed();
    let c = a.getCls().y.toLowerCase();
    
==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.d.ts (0 errors) ====
    declare module "D" {
        import {A} from "a";
        import {B} from "b";
        module "a" {
            interface A {
                getB(): B;
            }
        }
    }
    
==== e.ts (1 errors) ====
    /// <reference path="c.d.ts"/>
    import {A} from "./a";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "c.d.ts"
    import {Cls} from "C";
    
    A.prototype.getCls = function () { return undefined; }
    
    declare module "./a" {
        interface A {
            getCls(): Cls;
        }
    }
    